# ipld-inline

./: Cargo.toml  README.md  default_13059096625533786817_0_3671.profraw  default_13059096625533786817_0_3677.profraw  default_4043864716203302617_0_3668.profraw  default_4313509673237537478_0_3668.profraw  default_650759500492820796_0_3668.profraw  default_7045038967156446105_0_3668.profraw  default_8341410385769770431_0_3668.profraw  flake.nix
benches/: my_benchmark.rs
inline_ipld/: Cargo.toml
inline_ipld/proptest-regressions/: cid.txt  extractor.txt
inline_ipld/src/: cid.rs  codec.rs  extractor.rs  inliner.rs  ipld.rs  iterator.rs  lib.rs  store.rs  test_util.rs
inline_ipld/src/codec/: encodable.rs  total.rs
inline_ipld/src/codec/encodable/: ipld.rs  traits.rs
inline_ipld/src/inliner/: at_least_once.rs  at_most_once.rs  naive.rs  traits.rs
inline_ipld/src/ipld/: encodable.rs  inline.rs  inlined.rs
inline_ipld/src/ipld/encodable/: encodable_ipld.rs  traits.rs
inline_ipld/src/iterator/: post_order.rs
inline_ipld/src/store/: memory.rs  traits.rs
inline_ipld/src/test_util/: cid_config.rs  codecs.rs  some_codec.rs  super_ipld.rs  super_multihash.rs  super_version.rs
inline_ipld_wasm/: Cargo.toml
inline_ipld_wasm/src/: lib.rs
inline_ipld_wasm/tests/: app.rs
ipld_inline/: Cargo.toml
ipld_inline/proptest-regressions/iterator/: extractor.txt
ipld_inline/src/: cid.rs  extractor.rs  ipld.rs  iterator.rs  store.rs
ipld_inline/src/inliner/: at_most_once.rs  exactly_once.rs  traits.rs
ipld_inline/src/store/: traits.rs
ipld_inline_wasm/: Cargo.toml
ipld_inline_wasm/src/: lib.rs
ipld_inline_wasm/wit/: world.wit
src/: cid.rs  extractor.rs  inliner.rs  ipld.rs  iterator.rs  lib.rs  store.rs
src/inliner/: at_most_once.rs  exactly_once.rs  naive.rs  quiet.rs  traits.rs
src/iterator/: extractor.rs  mod.rs  post_order.rs
src/store/: at_most_once.rs  memory.rs  traits.rs
