[package]
name = "ipld_inline"
version = "0.1.0"
edition = "2021"
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]
license = "Apache-2.0"
readme = "README.md"

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
libipld = "0.16"
multihash = "0.18"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
libipld-cbor = "0.16"
pretty_assertions = "1.4.0"
proptest = "1.4"

[[bench]]
name = "my_benchmark"
harness = false

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
