[package]
name = "inline_ipld"
version = "0.1.0"
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
libipld = { version = "0.16", features = ["serde-codec"] }
multihash = "0.18"
serde = { version = "1.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
libipld-cbor = "0.16"
pretty_assertions = "1.4"
proptest = "1.4"

[[bench]]
name = "bench"
harness = false
