[package]
name = "inline_ipld"
version = "0.1.0"
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
libipld = { version = "0.16" }
libipld-cbor = { version = "0.16", optional = true }
libipld-json = { version = "0.16", optional = true }
libipld-pb = { version = "0.16", optional = true }
multihash = "0.18"
serde = { version = "1.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
proptest = "1.4"

[[bench]]
name = "bench"
harness = false

[features]
default = ["dag-cbor", "dag-json", "serde-codec"]
dag-cbor = ["libipld-cbor"]
dag-json = ["libipld-json"]
serde-codec = ["libipld/serde-codec", "serde"]
