# You must change these to your own details.
[package]
name = "inline_ipld_wasm"
description = "Wasmification of `inline_ipld`"
version = "0.1.0"
categories = ["wasm"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
inline_ipld = { path = "../inline_ipld", version = "=0.1.0" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
